basic routing for login and states controller works but need to work on current user as users are able to view other users data

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,3 +1,74 @@
-<h1>States#index</h1>
-<p>Find me in app/views/states/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+
+  <head>
+  	<style type="text/css">
+
+       table {
+       	width: 1200px;
+       }
+
+       th, td {
+       	padding: 10px 10px 10px 10px 10px 10px 10px;
+       }       
+
+
+  	</style>
+
+
+  </head>
+
+
+  <body>
+
+	<% if @user.states.empty? %>
+
+	    <h4>Welcome <%= @user.username %>!</h4>
+
+	     You have no data saved yet please click the following link to begin your search for <%= link_to "Connecticut COVID-19 Cases", new_user_state_path(@user) %>
+
+
+	<% else %>
+
+	    <h4>Welcome Back <%= @user.username %>!</h4>
+
+			<p>Your last log in was: <%= @user.updated_at.strftime("%A %B %e, %Y at %I:%M %P") %></p>
+
+			<p>Here is a list of your statewide COVID-19 data by date</p>
+
+			<p>Click on date to drill down on more data take to show page for each instance of state</p>
+
+			<table>
+				<tr>
+					<% @user.states.column_names[2..-3].map do |col_name| %>		
+					  <th colspan="1.5"> <%= col_name.split("_").join(" ").titleize %></th>
+						<td></td>
+					<% end %>
+				</tr>
+				
+					<% @user.states.map do |state| %>
+					<tr>			
+					   <td colspan="2"> <%= link_to state.query_date, user_states_path(state.id) %></td>
+					   <td colspan="2"> <%= state.name %></td>
+					   <td colspan="2"> <%= state.total_tests %> </td>
+					   <td colspan="2"> <%= state.total_cases %> </td>
+					   <td colspan="2"> <%= state.confirmed_cases %> </td>
+					   <td colspan="2"> <%= state.hospitalized_cases %> </td>
+					   <td colspan="2"> <%= state.confirmed_deaths %> </td>
+					</tr>
+					<% end %>
+			</table>
+
+	<% end %>
+	</body>		 
+</html>
+
+
+
+
+
+
+
+
+
 
