--- a/app/views/ct_user/home.html.erb
+++ b/app/views/ct_user/home.html.erb
@@ -21,18 +21,18 @@
 
   <body>
 
-	<% if @user.states.empty? %>
+	<% if current_user.states.empty? %>
 
-	    <h4>Welcome <%= @user.username %>!</h4>
+	    <h4>Welcome <%= current_user.username %>!</h4>
 
-	     You have no data saved yet please click the following link to begin your search for <%= link_to "Connecticut COVID-19 Cases", new_ct_user_state_path(@ct_user) %>
+	     You have no data saved yet please click the following link to begin your search for <%= link_to "Connecticut COVID-19 Cases", new_user_state_path(current_user) %>
 
 
 	<% else %>
 
 	    <h4>Welcome Back <%= @user.username %>!</h4>
 
-			<p>Your last log in was: <%= @user.updated_at.strftime("%A %B %e, %Y at %I:%M %P") %></p>
+			<p>Your last log in was: <%= current_user.updated_at.strftime("%A %B %e, %Y at %I:%M %P") %></p>
 
 			<p>Here is a list of your statewide COVID-19 data by date</p>
 
@@ -40,15 +40,15 @@
 
 			<table>
 				<tr>
-					<% @user.states.column_names[2..-3].map do |col_name| %>		
+					<% current_user.states.column_names[2..-3].map do |col_name| %>		
 					  <th colspan="1.5"> <%= col_name.split("_").join(" ").titleize %></th>
 						<td></td>
 					<% end %>
 				</tr>
 				
-					<% @user.states.map do |state| %>
+					<% current_user.states.map do |state| %>
 					<tr>			
-					   <td colspan="2"> <%= link_to state.query_date, ct_user_state_path(state.id) %></td>
+					   <td colspan="2"> <%= link_to state.query_date, current_user_state_path(state.id) %></td>
 					   <td colspan="2"> <%= state.name %></td>
 					   <td colspan="2"> <%= state.total_tests %> </td>
 					   <td colspan="2"> <%= state.total_cases %> </td>
