--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -10,11 +10,6 @@
 
 <% else %>
 	
-  	  <h2><b>Welcome to the Chore Helper Management System</b></h2>
-
-  	  <ul>
-		  <li><%= link_to('Sign In', new_user_session_path) %></li>
-		  <li><%= link_to('Register', new_user_registration_path) %></li>
-	  </ul>
+	<%= render 'devise/shared/links' %>
 
 <% end %>
