--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,18 @@ function startTime() {
     // add a zero in front of numbers<10
     m = checkTime(m);
     s = checkTime(s);
-    document.getElementById('time').innerHTML = h + ":" + m + ":" + s;
+
+    // Choose either "AM" or "PM" as appropriate
+    var timeOfDay = ( h < 12 ) ? "AM" : "PM";
+
+    // Convert the hours component to 12-hour format if needed
+    h = ( h > 12 ) ? h - 12 : h
+
+    // Convert an hours component of "0" to "12"
+    h = ( h == 0 ) ? 12 : h;
+
+
+    document.getElementById('time').innerHTML = h + ":" + m + ":" + s + " " + timeOfDay;
     t = setTimeout(function () {
         startTime()
     }, 500);
