--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -23,20 +23,16 @@
 
 	<% if @user.states.empty? %>
 
-	    <h4>Welcome <%= @user.username %>!</h4>
+	    <h4><%= @user.username %>,</h4>
 
 	     You have no data saved yet please click the following link to begin your search for <%= link_to "Connecticut COVID-19 Cases", new_user_state_path(@user) %>
 
 
 	<% else %>
 
-	    <h4>Welcome Back <%= @user.username %>!</h4>
-
-			<p>Your last log in was: <%= @user.updated_at.strftime("%A %B %e, %Y at %I:%M %P") %></p>
-
 			<p>Here is a list of your statewide COVID-19 data by date</p>
 
-			<p>Click on date to drill down on more data take to show page for each instance of state</p>
+			<p>Click on date to drill down on more data take to show page for each instance of state</p><br>
 
 			<table>
 				<tr>
@@ -48,7 +44,7 @@
 				
 					<% @user.states.map do |state| %>
 					<tr>			
-					   <td colspan="2"> <%= link_to state.query_date, user_states_path(state.id) %></td>
+					   <td colspan="2"> <%= link_to state.query_date.strftime('%m/%d/%Y'), user_state_path(user.id) %></td>
 					   <td colspan="2"> <%= state.name %></td>
 					   <td colspan="2"> <%= state.total_tests %> </td>
 					   <td colspan="2"> <%= state.total_cases %> </td>
