--- a/app/assets/stylesheets/ct-covid-tracker.scss
+++ b/app/assets/stylesheets/ct-covid-tracker.scss
@@ -27,3 +27,23 @@ a.link-to-text_color {
 
 }
 
+
+table {
+  border-spacing: 1em .5em;
+  padding: 0 2em 1em 0;
+  border: 1px solid orange;
+}
+
+th {
+
+  background: #d2d2d2;
+	
+}
+
+td {
+  width: 1.5em;
+  height: 1.5em;
+  background: #d2d2d2;
+  text-align: center;
+  vertical-align: middle;
+}
