--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -25,8 +25,7 @@
 
 	    <h4><%= current_user.username %>,</h4>
 
-	     You have no data saved yet please click the following link to begin your search for <%= link_to "Connecticut COVID-19 Cases", new_user_state_path(current_user) %>
-
+	     You have no data saved yet please click the following link to begin your search: <br>
 
 	<% else %>
 
