added logic to track covid data by ethnic group

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -45,7 +45,7 @@
 			  	<th>Hospitalizations</th>
 			  	<th>Hospitalized</th>
 			  	<th>Deaths</th>
-			  	<th>Death Rate</th>
+			  	<th>Death Change</th>
 
 
 
