--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -29,7 +29,7 @@
 
 	<% else %>
 
-			<p>Here is a list of your statewide COVID-19 data by date</p>
+			<p>Here is a list of your STATEWIDE COVID-19 data by date</p>
 
 			<p>Click on date to drill down on more data take to show page for each instance of state</p><br>
 
