--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -38,9 +38,8 @@
         <tr>
 
           <th>Date</th>
-          <th>Total Tests</th>
-          <th>Test Change</th>
-          <th>Total Cases</th>
+          <th>County Name</th>
+          <th>Confirmed Cases</th>
           <th>Case Change</th>
           <th>Hospitalizations</th>
           <th>Hospitalized</th>
@@ -57,11 +56,10 @@
           <% @counties.map do |county| %>
           <tr>      
              <td> <%= link_to county.query_date.strftime('%m/%d/%Y'), user_county_path(current_user.id, county.id) %></td>
-             <td><%= county.total_tests %> </td>
-             <td><%= county.test_dir %> <%= county.test_change %> </td>
-             <td><%= county.total_cases %> </td>
+             <td><%= county.name %> </td>
+             <td><%= county.confirmed_cases %> </td>
              <td><%= county.case_dir %> <%= county.case_change %> </td>
-             <td><%= county.hospitalized_cases %> </td>
+             <td><%= county.hospitalizations %> </td>
              <td><%= county.hosp_dir %> <%= county.hospitalized_change %> </td>
              <td><%= county.confirmed_deaths %> </td>
              <td><%= county.death_dir %> <%= county.death_change %> </td>
