--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -29,7 +29,7 @@
 
   <% else %>
 
-      <p>Here is a list of your COUNTYWIDE COVID-19 data by date</p>
+      <p>Here is a list of your TOWNWIDE COVID-19 data by date</p>
 
       <p>Click on date to drill down on more data take to show page for each instance of county</p><br>
 
@@ -38,7 +38,7 @@
         <tr>
 
           <th>Date</th>
-          <th>County Name</th>
+          <th>Town Name</th>
           <th>Confirmed Cases</th>
           <th>Case Change</th>
           <th>Hospitalizations</th>
@@ -53,16 +53,16 @@
 
         </tr>
         
-          <% @counties.map do |county| %>
+          <% @towns.map do |town| %>
           <tr>      
-             <td> <%= link_to county.query_date.strftime('%m/%d/%Y'), user_county_path(current_user.id, county.id) %></td>
-             <td><%= county.name %> </td>
-             <td><%= county.confirmed_cases %> </td>
-             <td><%= county.case_dir %> <%= county.case_change %> </td>
-             <td><%= county.hospitalizations %> </td>
-             <td><%= county.hosp_dir %> <%= county.hospitalized_change %> </td>
-             <td><%= county.confirmed_deaths %> </td>
-             <td><%= county.death_dir %> <%= county.death_change %> </td>
+             <td> <%= link_to town.query_date.strftime('%m/%d/%Y'), user_town_path(current_user.id, town.id) %></td>
+             <td><%= town.name %> </td>
+             <td><%= town.confirmed_cases %> </td>
+             <td><%= town.case_dir %> <%= town.case_change %> </td>
+             <td><%= town.hospitalizations %> </td>
+             <td><%= town.hosp_dir %> <%= town.hospitalized_change %> </td>
+             <td><%= town.confirmed_deaths %> </td>
+             <td><%= town.death_dir %> <%= town.death_change %> </td>
 
 
           </tr>
@@ -72,7 +72,7 @@
   <% end %>
 
 <br>
-  <%= link_to "Select Additional Dates", new_user_county_path(current_user) %>
+  <%= link_to "Select Additional Dates", new_user_town_path(current_user) %>
   
   </body>    
 </html>
