completed index view for towns

--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -21,7 +21,7 @@
 
   <body>
 
-  <% if current_user.counties.empty? %>
+  <% if current_user.towns.empty? %>
 
       <h4><%= current_user.username %>,</h4>
 
