--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -57,7 +57,7 @@
 					<% @states.each do |state| %>
 
 					<tr>	
-					   <td><%= link_to "Delete", destroy_state_path(current_user.id, state.id), :method => 'delete' %></td>		
+					   <td><%= button_to "Delete", {:controller => :states, :action => :destroy, :id => state.id}, :method => 'delete' %></td>		
 					   <td><%= state.query_date.strftime('%m/%d/%Y') %> </td>
 					   <td><%= state.total_tests %> </td>
 					   <td><%= state.test_dir %> <%= state.test_change %> </td>
