--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,25 +18,19 @@
             <section class="hero is-info is-medium is-bold">
             <div class="hero-head">
                 <h1>Connecticut COVID-19 Tracker System</h1>
-
+                <br>
 
 
                 <nav class="navbar">
                     <div class="container">
 
                         
-                            <div class="navbar-brand">
- 
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                </span>
-                            </div>
+                            <div class="navbar"></div>
                         <div id="navbarMenu" class="navbar-menu">
-                            <div class="navbar-end">
+                            <div class="navbar">
                                 <div class="tabs is-right">
                                     <ul>
-                                        <li class="is-active"><a></a></li>
+                                        <li class="is-active"></li>
                                         <li><%= link_to "Daily Summary", state_summary_path if user_signed_in?  %></li>
                                         <li><%= link_to "State Totals", user_states_path(current_user) if user_signed_in? %></li> 
                                         <li><%= link_to "County Totals", user_counties_path(current_user) if user_signed_in? %></li>
@@ -55,10 +49,10 @@
                         </div>
                     </div>
                 </nav>
-            </div><br><br>
-
+            </div>
+                <br>
                 <div class="tile is-ancestor">
-                    <div class="tile is-vertical is-9">
+                    <div class="tile is-vertical is-8">
                         <div class="tile">
                             <div class="tile is-parent is-vertical">
 
