--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,9 +54,7 @@
                 <div class="tile is-ancestor">
                     <div class="tile is-vertical is-8">
                         <div class="tile">
-                            <div class="tile is-parent is-vertical">
-
-                            </div>
+                            <div class="tile is-parent is-vertical"></div>
                             <div class="tile is-parent">
                                 <article class="tile is-child notification is-white">
                                
@@ -129,10 +127,7 @@ startTime();
 
                     <div class="tile is-parent is-shady">
 
-                    </div>
-                </div>
-            </div>
-        </section>
+
 
         
 
